# Pandrator

./: .gitignore  FUTURE_TTS_OPTIMIZATION_NOTES.md  LICENSE  LINUX_COMPATIBILITY.md  PandratorInstaller.spec  README.md  audiobook_generator.py  inspect_db.py  main.py  minimum_nvidia_start.bat  openapi.json  pandrator.py  pandrator_installer_launcher.py  pandrator_installer_launcher.spec  pandrator_installer_launcher_linux.spec  pandrator_installer_launcher_xtts.py  pandrator_start_minimal.py  pandrator_start_minimal_silero.py  pandrator_start_minimal_voicecraft.py  pandrator_start_minimal_xtts.py  pixi.toml  pyproject.toml  requirements-installer.txt  requirements.txt  start-minimum-cpu.bat  start_minimum_nvidia.bat  style.qss  test_hash_logic.py  test_hashes.py
audiobook_generator/: audiobook_generator.py  requirements.txt
docs/: dubbing_migration_testing.md  parakeet_onnx_spike.md  subdub_integration_roadmap.md  web-migration-status.md  web-parity-audit.md
pandrator/: __main__.py  app_logic.py  app_state.py  config.json  constants.py  pandrator.py
pandrator_installer/: __init__.py  backend_catalog.py  build_support.py  catalog.py  cli.py  components.py  constants.py  crispasr.py  lifecycle.py  models.py  operations.py  pixi.py  platforms.py  pyproject.toml  reporting.py  runtime.py  service.py  storage.py  subprocess_env.py  supervisor.py  update.py  workflows.py
pandrator_installer/gui/: __init__.py  actions.py  backend_card.py  main_window.py  support.py
scratch/: paddle_v6_layout_m_benchmark.py  paddle_v6_medium_benchmark.py  pdf_ingestion_prototype.py  user_log.txt
scripts/: benchmark_tts.py  build_appimage_container.py  build_installer.py  build_linux_appimage.py  build_release_packages.py  dubbing_live_smoke.py  generate_web_contract.py  run_dubbing_local_smoke.ps1  run_dubbing_tests.ps1  run_web_e2e_server.py
tests/: conftest.py  test_app_logic_audio_variants.py  test_app_logic_notifications.py  test_audio_variant_handler.py  test_audio_verification.py  test_build_appimage_container.py  test_build_release_packages.py  test_dubbing_artifacts.py  test_dubbing_audio_sync.py  test_dubbing_boundary_correction.py  test_dubbing_credentials.py  test_dubbing_llm_correction.py  test_dubbing_llm_translation.py  test_dubbing_manual_timing.py  test_dubbing_run_usage.py  test_dubbing_settings.py  test_dubbing_speech_blocks_integration.py  test_dubbing_status_definitions.py  test_dubbing_subtitle_logic.py  test_dubbing_transcription.py  test_dubbing_ui.py  test_dynamic_sentence_length.py  test_generated_sentences_ui.py  test_generation_anew.py  test_guided_dubbing_workflow.py  test_installer_architecture.py  test_installer_backend_catalog.py  test_installer_launcher_chatterbox.py  test_installer_lifecycle.py  test_installer_rvc_service.py  test_installer_update_migrations.py  test_installer_web_readiness.py  test_llm_handler.py  test_llm_prompts_mode.py  test_nemo_normalizer.py  test_pdf_ingestion.py  test_rvc_handler.py  test_sentence_segmenter.py  test_session_status_flow.py  test_settings_and_trash.py  (+29 more)
tts_voices/: voice_library_seed.json
web/: package-lock.json  package.json  playwright.config.ts  svelte.config.js  (+2 more)
(+2494 files in other folders)
