[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pandrator"
version = "0.48.0.dev0"
description = "Browser-based audiobook, subtitle, and voiceover production workspace"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "flask>=3.1,<4",
  "pydantic>=2.10,<3",
  "psutil>=6,<8",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "waitress>=3.0,<4",
]

[project.optional-dependencies]
legacy = [
  "PyQt6==6.7.1",
  "pydub",
]
gui = [
  "PyQt6==6.7.1",
]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
pandrator = "pandrator.web.cli:main"
pandrator-installer = "pandrator_installer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pandrator", "pandrator_installer"]
include = [
  "pandrator/web/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

