[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pandrator"
version = "0.5.7"
description = "Browser-based audiobook, subtitle, and voiceover production workspace"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "cryptography>=43,<46",
  "flask>=3.1,<4",
  "google-auth>=2,<3",
  "beautifulsoup4>=4.12,<5",
  "deepl>=1.20,<2",
  "EbookLib>=0.18,<1",
  "ffmpeg-python>=0.2,<1",
  "hasami>=0.0.1,<1",
  "litellm>=1.60,<1.92",
  "mutagen>=1.47,<2",
  "num2words>=0.5,<1",
  "Pillow>=10,<13",
  "pydub>=0.25,<1",
  "PyMuPDF>=1.25,<2",
  "regex>=2024.11",
  "sentence-splitter>=1.4,<2",
  "Unidecode>=1.3,<2",
  "wtpsplit-lite==0.2.0",
  "yt-dlp>=2025.1",
  "pydantic>=2.10,<3",
  "psutil>=6,<8",
  "requests>=2.32,<3",
  "sqlalchemy>=2.0,<3",
  "waitress>=3.0,<4",
]

[project.optional-dependencies]
ocr = ["onnxruntime>=1.20,<2", "paddleocr==3.7.0"]
text-normalization = ["nemo-text-processing==1.2.0"]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
pandrator = "pandrator.web.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pandrator"]
include = [
  "pandrator/web/static/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

